# reddy-led

./: .gitmodules
animation/: CMakeLists.txt  animation.hpp  color.hpp  parser.cpp  parser.hpp
animation/include2/yajl/: yajl_version.h
firmware/: CMakeLists.txt  sdkconfig
firmware/components/animation/: CMakeLists.txt  animation  animation.cpp  animation.hpp  parser.cpp  parser.hpp
firmware/components/exception/: CMakeLists.txt  exception.hpp
firmware/components/ws2812/: CMakeLists.txt  strip.cpp  strip.hpp
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp  web-anim.cpp  web.cpp  web.hpp
led-anim-analyze/: CMakeLists.txt  demo.json  main.cpp
